k8s/service-agent.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent-svc
  namespace: arturo-llm-test
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app: agent
  ports:
    - port: 8000
      targetPort: 8000
