k8s/service-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
  namespace: arturo-llm-test
spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
